<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff">


        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:hint="@string/first_name_value"
            android:fontFamily="sans-serif-smallcaps"/>

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:hint="@string/last_name_value"
            android:fontFamily="sans-serif-smallcaps"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etStreetAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:hint="@string/address_value"
        android:fontFamily="sans-serif-smallcaps"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:hint="@string/city_value"
            android:fontFamily="sans-serif-smallcaps"/>

        <EditText
            android:id="@+id/etState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:hint="@string/state_value"
            android:fontFamily="sans-serif-smallcaps"/>

        <EditText
            android:id="@+id/etZip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:hint="@string/zipcode_value"
            android:fontFamily="sans-serif-smallcaps"/>



    </LinearLayout>

    <Button
        android:id="@+id/btnGenerateLabel"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/generate_value"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@color/black"
        android:onClick="onGenerateLabel"
        android:fontFamily="sans-serif-smallcaps"/>

    <TextView
        android:id="@+id/etNameOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/output_text_size"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-smallcaps"/>/>
    <TextView
        android:id="@+id/etAddressOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/output_text_size"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-smallcaps"/>/>






</LinearLayout>